--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # development dependencies
 
-black
-isort
-twine
-pipe2codeblock
-setuptools
+black==19.10b0
+isort==4.3.21
+twine==3.1.1
+pipe2codeblock==1.0.0
+setuptools==44.0.0
+wheel==0.33.6
